src/objects/Intake__c.object
<CustomObject>
    <fields>
        <fullName>Education_under_12_years__c</fullName>
        <label>Education under 12 years</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emplyoment_Status__c</fullName>
        <label>Emplyoment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employed Full Time</fullName>
                </value>
                <value>
                    <fullName>Employed Part Time</fullName>
                </value>
                <value>
                    <fullName>Maternity  leave, unpaid, full time</fullName>
                </value>
                <value>
                    <fullName>Maternity  leave, unpaid, part time</fullName>
                </value>
                <value>
                    <fullName>Maternity leave, paid, full time</fullName>
                </value>
                <value>
                    <fullName>Permanent Disability</fullName>
                </value>
                <value>
                    <fullName>Temporary Disability</fullName>
                </value>
                <value>
                    <fullName>Unemployed Not Seeking Work-Barriers</fullName>
                </value>
                <value>
                    <fullName>Unemployed Not Seeking Work-Preference</fullName>
                </value>
                <value>
                    <fullName>Unemployed Not Seeking Work-Teen Caregiver</fullName>
                </value>
                <value>
                    <fullName>Unemployed Seeking Work</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Encounter_Type__c</fullName>
        <label>Encounter Type</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpDeliDate__c</fullName>
        <label>ExpDeliDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAMILY_NUMBER_CR__c</fullName>
        <label>FAMILY NUMBER-CR</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAW__c</fullName>
        <label>FAW</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN_COUNTY_CODE__c</fullName>
        <label>FN-COUNTY CODE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__c</fullName>
        <label>FN</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FOB_Actual_Interview__c</fullName>
        <label>FOB Actual Interview</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSW__c</fullName>
        <label>FSW</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Level_Change_Date__c</fullName>
        <label>Family Level Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Birth__c</fullName>
        <label>First Birth?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MIEC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>State HF</fullName>
                </value>
                <value>
                    <fullName>TANF/MOE</fullName>
                </value>
                <value>
                    <fullName>Title 20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gest_Age__c</fullName>
        <label>Gest. Age</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>22 weeks</fullName>
                </value>
                <value>
                    <fullName>23 weeks</fullName>
                </value>
                <value>
                    <fullName>24 weeks</fullName>
                </value>
                <value>
                    <fullName>25 weeks</fullName>
                </value>
                <value>
                    <fullName>26 weeks</fullName>
                </value>
                <value>
                    <fullName>27 weeks</fullName>
                </value>
                <value>
                    <fullName>28 weeks</fullName>
                </value>
                <value>
                    <fullName>29 weeks</fullName>
                </value>
                <value>
                    <fullName>30 weeks</fullName>
                </value>
                <value>
                    <fullName>31 weeks</fullName>
                </value>
                <value>
                    <fullName>32 weeks</fullName>
                </value>
                <value>
                    <fullName>33 weeks</fullName>
                </value>
                <value>
                    <fullName>34 weeks</fullName>
                </value>
                <value>
                    <fullName>35 weeks</fullName>
                </value>
                <value>
                    <fullName>36 weeks</fullName>
                </value>
                <value>
                    <fullName>37 weeks</fullName>
                </value>
                <value>
                    <fullName>38 weeks</fullName>
                </value>
                <value>
                    <fullName>39 weeks</fullName>
                </value>
                <value>
                    <fullName>40 Weeks</fullName>
                </value>
                <value>
                    <fullName>41 weeks</fullName>
                </value>
                <value>
                    <fullName>42 weeks </fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Healthy_Families_Participation__c</fullName>
        <inlineHelpText>Families that do not meet the criteria for Healthy Families participation, or if Healthy Families is at capacity, those families needing services may be referred to Community Partners.</inlineHelpText>
        <label>Healthy Families Participation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Eligible</fullName>
                </value>
                <value>
                    <fullName>Healthy Family is at capacity</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_Current_Psychiatric_abuse__c</fullName>
        <label>History of / Current Psychiatric abuse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>History_of_Current_Substance_abuse__c</fullName>
        <label>History of/ Current Substance abuse</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Assessment__c</fullName>
        <label>Home Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospital_Assessment__c</fullName>
        <label>Hospital Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>House_Hold_Id__c</fullName>
        <label>House Hold Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive_Reason__c</fullName>
        <label>Inactive Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inadequate_Income__c</fullName>
        <inlineHelpText>Include WIC,TANF or Medicaid eligible</inlineHelpText>
        <label>Inadequate Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InultTalkDownYou__c</fullName>
        <label>InultTalkDownYou</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Deceased__c</fullName>
        <label>Is Deceased</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Juven_Prob_Dep_has_open_case_on_child__c</fullName>
        <inlineHelpText>If the Juvenile Probation Department has an open case on a child, and that child is placed outside of the home, the family can receive Community Partners services if there are other children in the home.</inlineHelpText>
        <label>Juven Prob Dep has open case on child?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes, Child is Placed Outside of the Home, There are other Children in Home</fullName>
                </value>
                <value>
                    <fullName>Yes, Child is Placed Outside of the Home, There are no other Children in Home</fullName>
                </value>
                <value>
                    <fullName>Yes, Child is with Family</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages_Spoken_At_Home__c</fullName>
        <label>Languages Spoken in home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lookup_FAW__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAW</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Intakes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MOB_have_prenatal_care__c</fullName>
        <label>MOB have prenatal care?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Has Provider- regular contact</fullName>
                </value>
                <value>
                    <fullName>Has Provider – Sporadic Contact</fullName>
                </value>
                <value>
                    <fullName>On Medicaid Wait</fullName>
                </value>
                <value>
                    <fullName>No Provider</fullName>
                </value>
                <value>
                    <fullName>Has provider; limited contact</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Has provider; regular contact</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Has provider; use emergency room only</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>No provider; use emergency room only</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MOb_got_regular_checkups_and_PAP__c</fullName>
        <inlineHelpText>Did MOB got regular checkups and PAP smears  before getting pregnant.</inlineHelpText>
        <label>MOB got regular checkups and PAP  smears</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mach_C_DOB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mach C DOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marion_Program__c</fullName>
        <label>Marion Program</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Living with Partner</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marital_or_Family_Problems__c</fullName>
        <label>Marital or Family Problems</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Match_A_DOB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match A DOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_A_First_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match A First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_A_Last_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match A Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_EDC_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match EDC Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_T_First_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match T First Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_T_Last_Name__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match T Last Name</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mother_began_prenatal_care_at_Which_Week__c</fullName>
        <label>Mother began prenatal care at Which Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6 Weeks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Multi_Number__c</fullName>
        <label>Multi Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multi_Sequence__c</fullName>
        <label>Multi Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_limited_use_of_Alcohol__c</fullName>
        <inlineHelpText>No/ limited use of Alcohol prior to pregnancy.</inlineHelpText>
        <label>No/ limited use of Alcohol</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organizational_Unit__c</fullName>
        <label>Organizational Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Organization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Assessment__c</fullName>
        <label>Other Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Phone_Type__c</fullName>
        <label>Other Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Message Only</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>No Phone</fullName>
                </value>
                <value>
                    <fullName>Text Only</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Withheld</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Other_Site_Assessment__c</fullName>
        <label>Other Site Assessment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PN__c</fullName>
        <label>PN</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentSurvey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Survey</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Intake__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Survey</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Intake__c</referenceTo>
        <relationshipLabel>Parent Survey Questions</relationshipLabel>
        <relationshipName>ParentSurvey</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Status__c</fullName>
        <label>Parent Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Parent Survey</fullName>
                </value>
                <value>
                    <fullName>Parent Survey Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parental_Status__c</fullName>
        <label>Parental Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Person_Type__c</fullName>
        <label>Person Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adult 1</fullName>
                </value>
                <value>
                    <fullName>Adult 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <label>Phone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_Type__c</fullName>
        <label>Phone Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Message Only</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>No Phone</fullName>
                </value>
                <value>
                    <fullName>Text Only</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Withheld</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PhysicallyHurtYou__c</fullName>
        <label>PhysicallyHurtYou</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pregnancy_Status__c</fullName>
        <label>Pregnancy Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prenatal</fullName>
                </value>
                <value>
                    <fullName>Postnatal</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Income_is_SSDI__c</fullName>
        <label>Primary Income is SSDI</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_to_Pregnancy_no_Drugs_use__c</fullName>
        <label>Prior to Pregnancy no Drug use</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_to_pregnancy__c</fullName>
        <inlineHelpText>7 or more per week OR 3 or more in occassion</inlineHelpText>
        <label>Alcohol abuse Prior to Pregnancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <formula>IF(CONTAINS( CreatedBy.UserRole.Name, &quot;HFI&quot;), &quot;HFI&quot;, &quot;CPCS&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
</CustomObject>